# network-dmenu

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DNS_BENCHMARK.md  DNS_CACHE.md  GEOFENCING_ANALYSIS.md  GTK_BUILD_INSTRUCTIONS.md  ML_FEATURES.md  ML_IMPLEMENTATION_SUMMARY.md  Makefile  PKEXEC_SUPPORT.md  README.md  REFACTORING.md  SSH_PROXY_README.md  TODO.md  TOR_PROXY_README.md  build.rs  config.toml  config.toml.example  config.toml.minimal  debug_fingerprints.py  deny.toml  example_config_test.toml  flake.nix  shell.nix  test-ml.sh  test_nextdns.sh  test_parsing.py
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.github/workflows/: release.yml  rust.yml
docs/: ML_USAGE.md  NEXTDNS.md
examples/: geofencing_setup.sh  lock_demo.rs  lock_usage.md  ml_integration.rs  ssh_config.toml  tor_config.toml
init/: README.md  install-systemd-service.sh
init/systemd/: network-dmenu-privileged.service  network-dmenu.service
network-monitor-common/: Cargo.toml
network-monitor-common/src/: lib.rs
network-monitor-ebpf/: Cargo.toml
network-monitor-ebpf/src/: main.rs
scripts/: install-bpf-deps.sh
src/: bluetooth.rs  command.rs  config.rs  constants.rs  diagnostics.rs  dns_cache.rs  errors.rs  firewalld.rs  gtk_ui.rs  iwd.rs  lib.rs  main.rs  ml_integration.rs  networkmanager.rs  nextdns.rs  nextdns_api.rs  nextdns_refactored.rs  notifications.rs  port_utils.rs  privilege.rs  rfkill.rs  ssh.rs  streaming.rs  tailscale.rs  tailscale_prefs.rs  tor.rs  types.rs  utils.rs
src/bpf/: mod.rs  network_events.rs
src/bpf-programs/: network-monitor.rs
src/geofencing/: adaptive.rs  advanced_zones.rs  config.rs  daemon.rs  enhanced_daemon.rs  events.rs  fingerprinting.rs  ipc.rs  lifecycle.rs  mod.rs  observability.rs  performance.rs  retry.rs  security.rs  zones.rs
src/logger/: mod.rs
src/ml/: action_prioritizer.rs  diagnostic_analyzer.rs  exit_node_predictor.rs  mod.rs  network_predictor.rs  performance_tracker.rs  usage_patterns.rs
src/parsers/: bluetooth.rs  mod.rs  tailscale.rs  vpn.rs  wifi.rs
src/services/: bluetooth_service.rs  mod.rs  system_service.rs  tailscale_service.rs  vpn_service.rs  wifi_service.rs
test_scripts/: test_dns_commands.sh  test_quote_escaping.sh
xtask/src/: main.rs
