[package]
name = "network-dmenu"
version = "1.11.2"
edition = "2021"
authors = ["Cyril Levis"]
categories = ["gui"]
keywords = ["tailscale", "dmenu", "network", "vpn", "wifi"]
description = "A dmenu-based Tailscale and Wi-Fi network selector with support for NetworkManager and iwd."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cyrinux/network-dmenu"
repository = "https://github.com/cyrinux/network-dmenu"

[profile.release]
codegen-units = 1
lto = "thin"

[features]
default = []

[dependencies]
dirs = "6.0"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
toml = { version = "0.9", features = ["parse", "serde"], default-features = false }
regex = { version = "1.11", default-features = false, features = ["std"] }
reqwest = { version = "0.12", features = ["blocking", "default-tls", "json"], default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
notify-rust = { version = "4", default-features = false, features = ["dbus"] }
which = "8.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"], default-features = false }
webbrowser = "1.0.3"
country-emoji = "0.2.0"
clap = { version = "4", features = [
  "suggestions",
  "help",
  "usage",
  "color",
  "derive",
  "std",
], default-features = false }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
once_cell = "1.18"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.8"
