[package]
name = "network-dmenu"
version = "2.13.0"
edition = "2021"
authors = ["Cyril Levis"]
categories = ["gui"]
keywords = ["tailscale", "dmenu", "network", "vpn", "wifi"]
description = "A dmenu-based network knife tools, Tailscale, Wi-Fi network, mullvad, nextdns."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cyrinux/network-dmenu"
repository = "https://github.com/cyrinux/network-dmenu"

[features]
default = ["ml", "geofencing", "firewalld", "tailscale"]
ml = ["smartcore", "ndarray", "linfa", "linfa-trees"]
geofencing = [
  "sha2",
  "uuid",
  "thiserror",
  "async-trait",
  "fastrand",
  "libc",
  "tracing",
  "tracing-subscriber",
  "sysinfo",
]
firewalld = []
tailscale = []

[dependencies]
dirs = "6.0"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
toml = { version = "0.9", features = ["parse", "serde"], default-features = false }
regex = { version = "1.11", default-features = false, features = ["std"] }
reqwest = { version = "0.12", features = ["blocking", "default-tls", "json"], default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
notify-rust = { version = "4", default-features = false, features = ["dbus"] }
which = "8.0"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "process",
  "signal",
  "fs",
  "io-util",
], default-features = false }
webbrowser = "1.0.3"
country-emoji = "0.2.0"
clap = { version = "4", features = [
  "suggestions",
  "help",
  "usage",
  "color",
  "derive",
  "std",
], default-features = false }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.18"

# ML dependencies (optional)
smartcore = { version = "0.4", optional = true, default-features = false, features = ["serde", "ndarray-bindings"] }
ndarray = { version = "0.16", optional = true }
linfa = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }

# Geofencing dependencies (optional)
sha2 = { version = "0.10", optional = true }
uuid = { version = "1.0", optional = true, features = ["v4"] }
thiserror = { version = "2.0", optional = true }
async-trait = { version = "0.1", optional = true }
fastrand = { version = "2.0", optional = true }
libc = { version = "0.2", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
sysinfo = { version = "0.36", optional = true }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.8"
